<resources>
    <string name="app_name">圆月行</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="guide_page1_text1">繁华里残星点点</string>
    <string name="guide_page1_text2">盖不住莹莹月光</string>
    <string name="guide_page2_text1">只见那月影摇曳</string>
    <string name="guide_page2_text2">虽不完美</string>
    <string name="guide_page2_text3">万物芳华，终成泡影</string>
    <string name="guide_page3_text1">待到残月完美时</string>
    <string name="guide_page3_text2">踏过万水千山</string>
    <string name="guide_page3_text3">道是无缺圆汝梦</string>
    <string name="guide_page4_text1">月神分化五族</string>
    <string name="guide_page4_text2">借你之身，圆你之梦</string>
    <string name="guide_page5_text1">无尽奥秘</string>
    <string name="guide_page5_text2">待你来开启</string>
    <string name="hello">你好，请登录</string>
    <string name="LogUtilin_weixin">微信登录</string>
    <string name="LogUtilin_qq">QQ登录</string>
    <string name="LogUtilin_weibo">微博登录</string>
    <string name="reg_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="phone_account">手机号</string>
    <string name="country">国家</string>
    <string name="input_phone">请输入手机号</string>
    <string name="send_message">发送验证码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="email">邮箱</string>
    <string name="input_password">输入密码</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记了密码？</string>
    <string name="verification_code">验证码</string>
    <string name="click_LogUtilin">点击登录</string>
    <string name="input_message">请输入验证码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="click_register">点击注册</string>
    <string name="return_LogUtilin">返回登录</string>
    <string name="confirm">确认</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="moon_place">圆月宫</string>
    <string name="real_world">真实世界</string>
    <string name="moon_title">圆月称号</string>
    <string name="moon_task">圆月任务</string>
    <string name="contact_us">联系我们</string>
    <string name="moon_customer">圆月客服</string>
    <string name="share">Share</string>
    <string name="tab_menu_moon">残月</string>
    <string name="tab_menu_pet">月宠</string>
    <string name="tab_menu_heart">月友</string>
    <string name="tab_menu_me">我</string>
    <string name="tab_menu_map">月图</string>
    <string name="tab_menu_radar">雷达</string>
    <string name="tab_menu_package">背包</string>
    <string name="wear">佩戴</string>
    <string name="title_name">称号名称</string>
    <string name="title_level">称号级别</string>
    <string name="click_back">点击回退</string>
    <string name="click_into_personal_info">点击进入个人详情页</string>
    <string name="send">发送</string>
    <string name="nothing">Nothing</string>
    <string name="auction_house">月上拍卖行</string>
    <string name="moon_mall">月上商城</string>
    <string name="click_jump">点击跳过</string>
    <string name="my_moon_friend">我的月友</string>
    <string name="message_record">消息记录</string>
    <string name="nowday_moon">此时月</string>
    <string name="tomorrom_moon">彼时月</string>
    <string name="input_account">输入用户名(8字以内)</string>
    <string name="nickName">昵称</string>
    <string name="check_username">检测用户名</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="todo">TODO</string>
</resources>
