<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_background"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:translationZ="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/register_background">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/title_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_account"
                    android:textSize="20sp"/>
                <com.nightonke.jellytogglebutton.JellyToggleButton
                    android:id="@+id/jellytogglebt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:checked="false"
                    app:jtbJelly="random"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/pho_num"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textColorHint="#ffffff"
                        android:hint="@string/input_phone"
                        android:inputType="number"/>

                    <Button
                        android:id="@+id/send_num"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="20dp"
                        android:elevation="10dp"
                        android:textColor="#fff"
                        android:text="@string/send_message"
                        android:background="@drawable/custom_rectangle0"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/check_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="#ffffff"
                    android:hint="@string/input_message"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="#ffffff"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColorHint="#ffffff"
                    android:hint="@string/input_password_again"
                    android:inputType="textPassword"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <Button
                        android:id="@+id/click_check"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:textColor="#fff"
                        android:layout_gravity="center"
                        android:text="@string/confirm"
                        android:translationZ="10dp"
                        android:background="@drawable/custom_rectangle0"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>