<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"/>

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_map"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_map"
            android:text="@string/tab_menu_map" />

        <RadioButton
            android:id="@+id/rb_radar"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_radar"
            android:text="@string/tab_menu_radar" />

        <RadioButton
            android:id="@+id/rb_package"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_package"
            android:text="@string/tab_menu_package" />
    </RadioGroup>

</RelativeLayout>