<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar">
    <ImageView
        android:id="@+id/moonstep_LogUtilo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/moonstep_logo"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickName"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:met_textColorHint="@color/white"
        app:met_clearButton="true"
        app:met_accentTypeface="fonts/Satisfy-Regular.ttf"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/DoderBlue"
        app:met_floatingLabelText="nickName"
        app:met_floatingLabel="normal"
        app:layout_constraintTop_toBottomOf="@+id/moonstep_LogUtilo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/accountName"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textColor="@color/white"
            android:text="@string/man"/>
        <RadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/woman"/>
    </RadioGroup>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:met_textColorHint="@color/white"
        app:met_clearButton="true"
        app:met_accentTypeface="fonts/Satisfy-Regular.ttf"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/DoderBlue"
        app:met_floatingLabelText="password"
        app:met_floatingLabel="normal"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:met_textColorHint="@color/white"
        app:met_clearButton="true"
        app:met_accentTypeface="fonts/Satisfy-Regular.ttf"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/DoderBlue"
        app:met_floatingLabelText="password"
        app:met_floatingLabel="normal"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/click_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textColor="#fff"
        android:text="@string/click_register"
        android:layout_marginTop="20dp"
        android:translationZ="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_check"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_button"/>

    <Button
        android:id="@+id/return_LogUtilin_page"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:text="@string/return_LogUtilin"
        android:translationZ="8dp"
        app:layout_constraintTop_toBottomOf="@+id/click_register"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/login_button"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back0"
        android:layout_margin="5dp"
        android:contentDescription="@string/nothing"/>
    <View
        android:id="@+id/deepBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="10dp"
        android:background="#927c7a7a" />

    <View
        android:id="@+id/plainBackground"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationZ="10dp"
        android:background="@drawable/deep_gray_background" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationZ="10dp"
        android:layout_centerInParent="true" />

</android.support.constraint.ConstraintLayout>