<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_background"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:translationZ="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/register_background">

            <EditText
                android:id="@+id/input_mailBox"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:drawableStart="@mipmap/message"
                android:textColor="@color/white"
                android:textColorHint="#ffffff"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/account"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:textColor="@color/white"
                android:drawableStart="@mipmap/account"
                android:textColorHint="#ffffff"
                android:hint="@string/input_account"
                android:inputType="text"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:textColor="@color/white"
                android:drawableStart="@mipmap/password"
                android:layout_marginTop="10dp"
                android:textColorHint="#ffffff"
                android:hint="@string/input_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:theme="@style/MyEditText"
                android:drawableStart="@mipmap/password"
                android:layout_marginTop="10dp"
                android:textColorHint="#ffffff"
                android:hint="@string/input_password_again"
                android:inputType="textPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/click_register"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:textColor="#fff"
                    android:text="@string/click_register"
                    android:translationZ="10dp"
                    android:background="@drawable/login_button"/>
                <Button
                    android:id="@+id/return_login_page"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#fff"
                    android:text="@string/return_login"
                    android:translationZ="10dp"
                    android:background="@drawable/login_button"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>