<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_background"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:translationZ="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/register_background">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/pho_num"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="#ffffff"
                    android:hint="@string/input_phone"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/send_num"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:textColor="#fff"
                    android:text="@string/send_message"
                    android:translationZ="10dp"
                    android:background="@drawable/black_or_white_button_background"/>
            </LinearLayout>

            <EditText
                android:id="@+id/check_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#ffffff"
                android:hint="@string/send_message"
                android:inputType="number"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#ffffff"
                android:hint="@string/input_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#ffffff"
                android:hint="@string/input_password_again"
                android:inputType="textPassword"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/click_register"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:textColor="#fff"
                    android:text="@string/click_register"
                    android:translationZ="10dp"
                    android:background="@drawable/black_or_white_button_background"/>
                <Button
                    android:id="@+id/return_login_page"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:text="@string/return_login"
                    android:translationZ="10dp"
                    android:background="@drawable/black_or_white_button_background"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>