<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitXY"
    android:background="@drawable/guide_page2">
    <LinearLayout
        android:gravity="bottom"
        android:layout_marginBottom="40dp"
        android:id="@+id/absolute_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_page2_text1"
                android:textColor="#fff"
                android:layout_gravity="start"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="437dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_page2_text2"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="437dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_page2_text3"
                android:layout_gravity="end"
                android:textColor="#fff"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="437dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>